rename box-shadow, timing-function

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2208,15 +2208,15 @@
   --border-radius-2xl: 20px;
   --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
   --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
-  --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
+  --box-shadow-alt-1: 0 6px 20px rgba(0, 0, 0, 0.2);
   --cglwe-y: 1px solid rgba(0, 0, 0, 0.04);
-  --cizosd: 0 6px 16px rgba(0, 0, 0, 0.12);
+  --box-shadow-alt-2: 0 6px 16px rgba(0, 0, 0, 0.12);
   --cb-k-zk-c: 1px solid rgba(0, 0, 0, 0.04);
-  --e-swdx-p: 0 2px 4px rgba(0, 0, 0, 0.18);
+  --box-shadow-alt-3: 0 2px 4px rgba(0, 0, 0, 0.18);
   --g-fi-y-r-e: 1px solid rgba(0, 0, 0, 0.08);
   --f-ya-ggj: cubic-bezier(1, 0, 0.86, 1);
-  --bd-d-m-c-q: cubic-bezier(0, 0, 0.1, 1);
-  ---bz-mmq: cubic-bezier(0.35, 0, 0.65, 1);
+  --timing-function-alt-1: cubic-bezier(0, 0, 0.1, 1);
+  --timing-function-alt-2: cubic-bezier(0.35, 0, 0.65, 1);
   --bgxgx: #000000;
   --f-k-smk-x: #222222;
   --fo-jk-r-s: #717171;
@@ -2318,15 +2318,15 @@
   --border-radius-2xl: 20px;
   --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
   --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
-  --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
+  --box-shadow-alt-1: 0 6px 20px rgba(0, 0, 0, 0.2);
   --cglwe-y: 1px solid rgba(0, 0, 0, 0.04);
-  --cizosd: 0 6px 16px rgba(0, 0, 0, 0.12);
+  --box-shadow-alt-2: 0 6px 16px rgba(0, 0, 0, 0.12);
   --cb-k-zk-c: 1px solid rgba(0, 0, 0, 0.04);
-  --e-swdx-p: 0 2px 4px rgba(0, 0, 0, 0.18);
+  --box-shadow-alt-3: 0 2px 4px rgba(0, 0, 0, 0.18);
   --g-fi-y-r-e: 1px solid rgba(0, 0, 0, 0.08);
   --f-ya-ggj: cubic-bezier(1, 0, 0.86, 1);
-  --bd-d-m-c-q: cubic-bezier(0, 0, 0.1, 1);
-  ---bz-mmq: cubic-bezier(0.35, 0, 0.65, 1);
+  --timing-function-alt-1: cubic-bezier(0, 0, 0.1, 1);
+  --timing-function-alt-2: cubic-bezier(0.35, 0, 0.65, 1);
   --bgxgx: #000000;
   --f-k-smk-x: #222222;
   --fo-jk-r-s: #717171;
@@ -2433,15 +2433,15 @@
   --border-radius-2xl: 20px;
   --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
   --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
-  --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
+  --box-shadow-alt-1: 0 6px 20px rgba(0, 0, 0, 0.2);
   --cglwe-y: 1px solid rgba(0, 0, 0, 0.04);
-  --cizosd: 0 6px 16px rgba(0, 0, 0, 0.12);
+  --box-shadow-alt-2: 0 6px 16px rgba(0, 0, 0, 0.12);
   --cb-k-zk-c: 1px solid rgba(0, 0, 0, 0.04);
-  --e-swdx-p: 0 2px 4px rgba(0, 0, 0, 0.18);
+  --box-shadow-alt-3: 0 2px 4px rgba(0, 0, 0, 0.18);
   --g-fi-y-r-e: 1px solid rgba(0, 0, 0, 0.08);
   --f-ya-ggj: cubic-bezier(1, 0, 0.86, 1);
-  --bd-d-m-c-q: cubic-bezier(0, 0, 0.1, 1);
-  ---bz-mmq: cubic-bezier(0.35, 0, 0.65, 1);
+  --timing-function-alt-1: cubic-bezier(0, 0, 0.1, 1);
+  --timing-function-alt-2: cubic-bezier(0.35, 0, 0.65, 1);
   --bgxgx: #000000;
   --f-k-smk-x: #222222;
   --fo-jk-r-s: #717171;
@@ -2551,15 +2551,15 @@
     --border-radius-2xl: 20px;
     --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
     --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
-    --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
+    --box-shadow-alt-1: 0 6px 20px rgba(0, 0, 0, 0.2);
     --cglwe-y: 1px solid rgba(0, 0, 0, 0.04);
-    --cizosd: 0 6px 16px rgba(0, 0, 0, 0.12);
+    --box-shadow-alt-2: 0 6px 16px rgba(0, 0, 0, 0.12);
     --cb-k-zk-c: 1px solid rgba(0, 0, 0, 0.04);
-    --e-swdx-p: 0 2px 4px rgba(0, 0, 0, 0.18);
+    --box-shadow-alt-3: 0 2px 4px rgba(0, 0, 0, 0.18);
     --g-fi-y-r-e: 1px solid rgba(0, 0, 0, 0.08);
     --f-ya-ggj: cubic-bezier(1, 0, 0.86, 1);
-    --bd-d-m-c-q: cubic-bezier(0, 0, 0.1, 1);
-    ---bz-mmq: cubic-bezier(0.35, 0, 0.65, 1);
+    --timing-function-alt-1: cubic-bezier(0, 0, 0.1, 1);
+    --timing-function-alt-2: cubic-bezier(0.35, 0, 0.65, 1);
     --bgxgx: #000000;
     --f-k-smk-x: #222222;
     --fo-jk-r-s: #717171;
@@ -13914,7 +13914,7 @@ fieldset[disabled] .btn {
 }
 @media (hover: hover) {
   .dir.header-filter__controls-btn[class][class]:hover {
-    box-shadow: var(--cizosd);
+    box-shadow: var(--box-shadow-alt-2);
     transform: scale(1.04);
   }
 }
