--- a/src/css/components/header-filter.css
+++ b/src/css/components/header-filter.css
@@ -335,7 +335,7 @@
 }
 @media (hover: hover) {
   .dir.header-filter__controls-btn[class][class]:hover {
-    box-shadow: var(--cizosd);
+    box-shadow: var(--box-shadow-alt-2);
     transform: scale(1.04);
   }
 }
