--- a/src/css/components/cards/card-horizontal-outlined.css
+++ b/src/css/components/cards/card-horizontal-outlined.css
@@ -27,7 +27,7 @@
   scroll-snap-align: center;
 }
 .dir.card-horizontal-outlined__time-item[class][class] {
-  margin-bottom: var(--fgg-f-l-a);
+  margin-bottom: var(--spacer-3);
 }
 .dir-ltr.card-horizontal-outlined__time-item[class][class] {
   margin-right: 6px;
@@ -44,13 +44,13 @@
   background: var(--f-mkcy-f);
   border-radius: var(--border-radius-lg);
   box-shadow: var(--availability-list-item_box-shadow);
-  padding: var(--b-y-unon);
+  padding: var(--spacer-4);
 }
 @media (min-width: 744px) {
   .dir.card-horizontal-outlined__btn[class][class] {
     border-radius: var(--border-radius);
-    padding-top: var(--fgg-f-l-a);
-    padding-bottom: var(--fgg-f-l-a);
+    padding-top: var(--spacer-3);
+    padding-bottom: var(--spacer-3);
   }
 }
 .card-horizontal-outlined__btn-text-size[class][class] {
@@ -65,10 +65,10 @@
 .dir.card-horizontal-outlined[class][class] {
   border: 1px solid var(--j-qkgmf);
   border-radius: var(--border-radius-lg);
-  padding: var(--b-y-unon);
+  padding: var(--spacer-4);
 }
 .dir-ltr.card-horizontal-outlined[class][class] {
-  padding-right: var(--jaa-ni-h);
+  padding-right: var(--spacer-5);
 }
 .card-horizontal-outlined__media[class][class] {
   width: 123px;
@@ -79,7 +79,7 @@
   flex: 1;
 }
 .dir-ltr.card-horizontal-outlined__body[class][class] {
-  margin-left: var(--jaa-ni-h);
+  margin-left: var(--spacer-5);
 }
 .card-horizontal-outlined__btn-save-wrapper[class][class] {
   display: flex;
@@ -87,7 +87,7 @@
   height: 20px;
 }
 .dir.card-horizontal-outlined__btn-save-wrapper[class][class] {
-  margin-bottom: var(--h-x-sf-jw);
+  margin-bottom: var(--spacer-2);
 }
 .card-horizontal-outlined__price-info[class][class] {
   font-size: var(--c-zdwk-p);
