--- a/src/css/components/explore-filter-menu.css
+++ b/src/css/components/explore-filter-menu.css
@@ -5,7 +5,7 @@
   }
 }
 .dir.explore-filter-menu__price[class][class] {
-  padding-top: var(--fgg-f-l-a);
+  padding-top: var(--spacer-3);
 }
 .explore-filter-menu__price-title[class][class] {
   font-size: var(--iw-ehf-f);
@@ -14,7 +14,7 @@
   color: var(--fo-jk-r-s);
 }
 .dir.explore-filter-menu__price-title[class][class] {
-  padding-bottom: var(--f-fw-z-a-i);
+  padding-bottom: var(--spacer-8);
 }
 .explore-filter-menu__price-spinner[class][class] {
   width: 90%;
