--- a/src/css/components/jumbotron-header.css
+++ b/src/css/components/jumbotron-header.css
@@ -6,7 +6,7 @@
   line-height: var(--hu-t-o-g-n);
 }
 .dir.jumbotron-header__text[class][class] {
-  margin-bottom: var(--fgg-f-l-a);
+  margin-bottom: var(--spacer-3);
 }
 @media (max-width: 743px) {
   .jumbotron-header__text[class][class] {
@@ -21,6 +21,6 @@
   color: var(--fo-jk-r-s);
 }
 .dir.jumbotron-header__description[class][class] {
-  margin-top: var(--fgg-f-l-a);
+  margin-top: var(--spacer-3);
 }
 /* /Jumbotron Header */
