--- a/src/css/components/spinner-chart.css
+++ b/src/css/components/spinner-chart.css
@@ -38,7 +38,7 @@
   align-items: center;
 }
 .dir.spinner-chart__input-wrapper[class][class] {
-  margin-top: var(--ikx-k-pe);
+  margin-top: var(--spacer-6);
 }
 @media (min-width: 744px) {
   .dir.spinner-chart__input-wrapper[class][class] {
@@ -46,7 +46,7 @@
   }
 }
 .dir.spinner-chart__input-space[class][class] {
-  margin: var(--fgg-f-l-a);
+  margin: var(--spacer-3);
 }
 .spinner-chart__input-price {
   position: relative !important;
