--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1593,8 +1593,8 @@
   height: 100%!important
 }
 .dir.l1rjzj3m[class][class] {
-  padding-top: var(--fgg-f-l-a);
-  padding-bottom: var(--fgg-f-l-a)
+  padding-top: var(--spacer-3);
+  padding-bottom: var(--spacer-3)
 }
 ._edqkt1v {
   font-family: inherit!important;
@@ -1649,8 +1649,8 @@
   font-weight: var(--jx-zk-pv)
 }
 .dir.t2353uq[class][class] {
-  margin-bottom: var(--b-y-unon);
-  margin-top: var(--ic-zlb-s)
+  margin-bottom: var(--spacer-4);
+  margin-top: var(--spacer-6)
 }
 ._2lqt1m {
   padding-top: 5px!important;
@@ -1883,7 +1883,7 @@
   font-weight: var(--e-y-j-d-v-j)
 }
 .dir-ltr.a90wtny[class][class] {
-  margin-left: var(--jaa-ni-h)
+  margin-left: var(--spacer-5)
 }
 .c1iyjvyv[class][class] {
   appearance: none;
