--- a/src/css/root.css
+++ b/src/css/root.css
@@ -57,20 +57,19 @@
     #3b07bb 90%,
     #3b07bb 100%
   );
-  --jhzm-v-t: 16px;
-  --ikx-k-pe: 24px;
-  --kksqe-v: 32px;
-  --f-fw-z-a-i: 40px;
-  --cw-a-a-u-a: 48px;
-  --fvsvry: 64px;
-  --cy-o-aco: 80px;
-  --d-b-mrdy: 2px;
-  --h-x-sf-jw: 4px;
-  --fgg-f-l-a: 8px;
-  --b-y-unon: 12px;
-  --jaa-ni-h: 16px;
-  --ic-zlb-s: 24px;
-  --kc-t-qr-j: 32px;
+  --spacer-6: 24px;
+  --spacer-7: 32px;
+  --spacer-8: 40px;
+  --spacer-9: 48px;
+  --spacer-10: 64px;
+  --spacer-11: 80px;
+  --spacer-1: 2px;
+  --spacer-2: 4px;
+  --spacer-3: 8px;
+  --spacer-4: 12px;
+  --spacer-5: 16px;
+  --spacer-6: 24px;
+  --spacer-7: 32px;
   --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
@@ -161,20 +160,19 @@
     #3b07bb 90%,
     #3b07bb 100%
   );
-  --jhzm-v-t: 16px;
-  --ikx-k-pe: 24px;
-  --kksqe-v: 32px;
-  --f-fw-z-a-i: 40px;
-  --cw-a-a-u-a: 48px;
-  --fvsvry: 64px;
-  --cy-o-aco: 80px;
-  --d-b-mrdy: 2px;
-  --h-x-sf-jw: 4px;
-  --fgg-f-l-a: 8px;
-  --b-y-unon: 12px;
-  --jaa-ni-h: 16px;
-  --ic-zlb-s: 24px;
-  --kc-t-qr-j: 32px;
+  --spacer-6: 24px;
+  --spacer-7: 32px;
+  --spacer-8: 40px;
+  --spacer-9: 48px;
+  --spacer-10: 64px;
+  --spacer-11: 80px;
+  --spacer-1: 2px;
+  --spacer-2: 4px;
+  --spacer-3: 8px;
+  --spacer-4: 12px;
+  --spacer-5: 16px;
+  --spacer-6: 24px;
+  --spacer-7: 32px;
   --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
@@ -270,20 +268,19 @@
     #3b07bb 90%,
     #3b07bb 100%
   );
-  --jhzm-v-t: 16px;
-  --ikx-k-pe: 24px;
-  --kksqe-v: 32px;
-  --f-fw-z-a-i: 40px;
-  --cw-a-a-u-a: 48px;
-  --fvsvry: 64px;
-  --cy-o-aco: 80px;
-  --d-b-mrdy: 2px;
-  --h-x-sf-jw: 4px;
-  --fgg-f-l-a: 8px;
-  --b-y-unon: 12px;
-  --jaa-ni-h: 16px;
-  --ic-zlb-s: 24px;
-  --kc-t-qr-j: 32px;
+  --spacer-6: 24px;
+  --spacer-7: 32px;
+  --spacer-8: 40px;
+  --spacer-9: 48px;
+  --spacer-10: 64px;
+  --spacer-11: 80px;
+  --spacer-1: 2px;
+  --spacer-2: 4px;
+  --spacer-3: 8px;
+  --spacer-4: 12px;
+  --spacer-5: 16px;
+  --spacer-6: 24px;
+  --spacer-7: 32px;
   --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
@@ -392,20 +389,19 @@
       #3b07bb 90%,
       #3b07bb 100%
     );
-    --jhzm-v-t: 16px;
-    --ikx-k-pe: 24px;
-    --kksqe-v: 32px;
-    --f-fw-z-a-i: 40px;
-    --cw-a-a-u-a: 48px;
-    --fvsvry: 64px;
-    --cy-o-aco: 80px;
-    --d-b-mrdy: 2px;
-    --h-x-sf-jw: 4px;
-    --fgg-f-l-a: 8px;
-    --b-y-unon: 12px;
-    --jaa-ni-h: 16px;
-    --ic-zlb-s: 24px;
-    --kc-t-qr-j: 32px;
+    --spacer-6: 24px;
+    --spacer-7: 32px;
+    --spacer-8: 40px;
+    --spacer-9: 48px;
+    --spacer-10: 64px;
+    --spacer-11: 80px;
+    --spacer-1: 2px;
+    --spacer-2: 4px;
+    --spacer-3: 8px;
+    --spacer-4: 12px;
+    --spacer-5: 16px;
+    --spacer-6: 24px;
+    --spacer-7: 32px;
     --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
       'Helvetica Neue', sans-serif;
     --fy-rs-ca: 18px;
