--- a/src/css/components/cards/card-alt-4.css
+++ b/src/css/components/cards/card-alt-4.css
@@ -123,7 +123,7 @@
   position: relative;
 }
 .dir.card-alt-4__media[class][class] {
-  margin-bottom: var(--fgg-f-l-a);
+  margin-bottom: var(--spacer-3);
 }
 @media (min-width: 744px) {
   .dir.card-alt-4__media[class][class] {
@@ -387,8 +387,8 @@
   color: var(--theme_typography-color-secondary, var(--fo-jk-r-s));
 }
 .dir.card-alt-4__separator[class][class] {
-  margin-left: var(--h-x-sf-jw);
-  margin-right: var(--h-x-sf-jw);
+  margin-left: var(--spacer-2);
+  margin-right: var(--spacer-2);
 }
 .card-alt-4__location[class][class] {
   line-height: var(--j-p-z-kco);
@@ -471,8 +471,8 @@
   -webkit-line-clamp: 3;
 }
 .dir.card-alt-4__text[class][class] {
-  margin-bottom: var(--d-b-mrdy);
-  margin-top: var(--fgg-f-l-a);
+  margin-bottom: var(--spacer-1);
+  margin-top: var(--spacer-3);
 }
 @supports (overflow: clip) {
   .card-alt-4__text[class][class] {
@@ -598,11 +598,11 @@
 }
 .dir-ltr.card-alt-4__ratings-container[class][class]
   .card-alt-4__ratings-icon-wrapper[class][class] {
-  margin-right: var(--h-x-sf-jw);
+  margin-right: var(--spacer-2);
 }
 .dir-rtl.card-alt-4__ratings-container[class][class]
   .card-alt-4__ratings-icon-wrapper[class][class] {
-  margin-left: var(--h-x-sf-jw);
+  margin-left: var(--spacer-2);
 }
 .card-alt-4__ratings-container[class][class]
   .card-alt-4__ratings-rating[class][class] {
