--- a/src/css/root.css
+++ b/src/css/root.css
@@ -70,7 +70,7 @@
   --spacer-5: 16px;
   --spacer-6: 24px;
   --spacer-7: 32px;
-  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+  --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
@@ -173,7 +173,7 @@
   --spacer-5: 16px;
   --spacer-6: 24px;
   --spacer-7: 32px;
-  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+  --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
@@ -281,7 +281,7 @@
   --spacer-5: 16px;
   --spacer-6: 24px;
   --spacer-7: 32px;
-  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+  --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
@@ -402,7 +402,7 @@
     --spacer-5: 16px;
     --spacer-6: 24px;
     --spacer-7: 32px;
-    --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
       'Helvetica Neue', sans-serif;
     --fy-rs-ca: 18px;
     --d-ar-t-o-n: 22px;
