--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2271,7 +2271,7 @@
   --spacer-5: 16px;
   --spacer-6: 24px;
   --spacer-7: 32px;
-  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+  --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
@@ -2374,7 +2374,7 @@
   --spacer-5: 16px;
   --spacer-6: 24px;
   --spacer-7: 32px;
-  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+  --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
@@ -2482,7 +2482,7 @@
   --spacer-5: 16px;
   --spacer-6: 24px;
   --spacer-7: 32px;
-  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+  --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
@@ -2603,7 +2603,7 @@
     --spacer-5: 16px;
     --spacer-6: 24px;
     --spacer-7: 32px;
-    --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
       'Helvetica Neue', sans-serif;
     --fy-rs-ca: 18px;
     --d-ar-t-o-n: 22px;
@@ -10121,7 +10121,7 @@ select[disabled] {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -10679,7 +10679,7 @@ select[disabled] {
   text-align: center !important;
   text-decoration: none !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -10813,7 +10813,7 @@ fieldset[disabled] .btn {
   text-decoration: none !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -11030,7 +11030,7 @@ fieldset[disabled] .btn {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -11147,7 +11147,7 @@ fieldset[disabled] .btn {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -11271,7 +11271,7 @@ fieldset[disabled] .btn {
   text-align: center !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -11303,7 +11303,7 @@ fieldset[disabled] .btn {
   text-decoration: none !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -11327,7 +11327,7 @@ fieldset[disabled] .btn {
   text-decoration: none !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -11385,7 +11385,7 @@ fieldset[disabled] .btn {
   text-decoration: none !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -11409,7 +11409,7 @@ fieldset[disabled] .btn {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -11518,7 +11518,7 @@ fieldset[disabled] .btn {
   }
 }
 .btn-save-bordered[class][class] {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
@@ -14686,7 +14686,7 @@ fieldset[disabled] .btn {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -14821,7 +14821,7 @@ fieldset[disabled] .btn {
   text-align: center !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
