--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -2232,7 +2232,7 @@
 }
 .tbxu08r[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
   font-size: var(--lhy-d-yl);
   line-height: var(--fme-bf-w);
@@ -5659,7 +5659,7 @@
   cursor: not-allowed;
 }
 .card__btn-save {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
@@ -7429,7 +7429,7 @@ select[disabled] {
   width: 100%;
 }
 .jumbotron-btn-search-bg[class][class] {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
@@ -10997,7 +10997,7 @@ h3:first-child {
   }
 }
 .s1pd4s60[class][class] {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
@@ -12001,7 +12001,7 @@ h3:first-child {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -16852,7 +16852,7 @@ h3:first-child {
   padding-right: 8px;
 }
 .header__search-tabs-item-btn[class][class] {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
@@ -17134,7 +17134,7 @@ h3:first-child {
   text-decoration: none !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--ll-l-ys-f) !important;
   line-height: var(--f-xgviq) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -18997,7 +18997,7 @@ full__margin-bottom {
   touch-action: manipulation;
 }
 .header__search-tabs-item-btn[class][class] {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
@@ -22989,7 +22989,7 @@ html :where(img[class*='wp-image-']) {
   cursor: not-allowed;
 }
 .header__search-tabs-item-btn[class][class] {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
@@ -23190,7 +23190,7 @@ html :where(img[class*='wp-image-']) {
 }
 .products-container__header-text-desc[class][class] {
   color: var(--fo-jk-r-s);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--e-y-j-d-v-j);
   font-size: var(--c-zdwk-p);
   line-height: var(--j-p-z-kco);
@@ -24521,7 +24521,7 @@ html :where(img[class*='wp-image-']) {
   touch-action: manipulation;
 }
 .v7aged4[class][class] {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
@@ -24724,7 +24724,7 @@ html :where(img[class*='wp-image-']) {
 }
 .h1v4rb5q[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
   font-size: var(--lhy-d-yl);
   line-height: var(--fme-bf-w);
@@ -24912,7 +24912,7 @@ html :where(img[class*='wp-image-']) {
 }
 .t9gtck5[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
@@ -24922,7 +24922,7 @@ html :where(img[class*='wp-image-']) {
 }
 .s11wgnhd[class][class] {
   color: var(--fo-jk-r-s);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--e-y-j-d-v-j);
   font-size: var(--i-nh-zme);
   line-height: var(--gvarj-f);
@@ -25041,14 +25041,14 @@ html :where(img[class*='wp-image-']) {
 }
 .tehcqxo[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
   font-size: var(--lhy-d-yl);
   line-height: var(--fme-bf-w);
 }
 .s9fngse[class][class] {
   color: var(--fo-jk-r-s);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--e-y-j-d-v-j);
   font-size: var(--c-zdwk-p);
   line-height: var(--j-p-z-kco);
@@ -25177,7 +25177,7 @@ html :where(img[class*='wp-image-']) {
 }
 .t1tlp7t5[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
@@ -25267,7 +25267,7 @@ html :where(img[class*='wp-image-']) {
 }
 .c17fz67d[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--e-y-j-d-v-j);
   font-size: var(--f-cv-j-j-p);
   line-height: var(--f-l-h-bac);
@@ -25301,14 +25301,14 @@ html :where(img[class*='wp-image-']) {
 }
 .c1lue5su[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--e-y-j-d-v-j);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
 }
 .hgq99v9[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
@@ -25341,7 +25341,7 @@ html :where(img[class*='wp-image-']) {
 }
 .hpilngu[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
@@ -25356,7 +25356,7 @@ html :where(img[class*='wp-image-']) {
 }
 .h4lj7td[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
@@ -25988,14 +25988,14 @@ html :where(img[class*='wp-image-']) {
 }
 .products-container__rule-text-h2[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
   font-size: var(--lhy-d-yl);
   line-height: var(--fme-bf-w);
 }
 .products-container__rule-text-desc[class][class] {
   color: var(--fo-jk-r-s);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--e-y-j-d-v-j);
   font-size: var(--i-nh-zme);
   line-height: var(--gvarj-f);
@@ -26082,7 +26082,7 @@ html :where(img[class*='wp-image-']) {
   text-decoration: none !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -27804,7 +27804,7 @@ tr.hide {
   padding-right: 0;
 }
 .explore__list-heart-font[class][class] {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
@@ -29864,7 +29864,7 @@ tr.hide {
   content: '';
 }
 .atm_bx_1ltc5j7:is(*, #x) {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
 }
 .atm_cs_qo5vgd:is(*, #x) {
   font-weight: var(--jx-zk-pv);
@@ -30730,7 +30730,7 @@ tr.hide {
   text-decoration: none !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -30923,7 +30923,7 @@ tr.hide {
   text-decoration: none !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -31022,7 +31022,7 @@ tr.hide {
   outline: 0;
   font-size: var(--lhy-d-yl);
   line-height: var(--fme-bf-w);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   overflow: hidden;
   position: relative;
   width: calc(5 * var(--spacer-3));
@@ -32105,7 +32105,7 @@ tr.hide {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -32193,7 +32193,7 @@ tr.hide {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -33901,7 +33901,7 @@ tr.hide {
   padding-right: 8px;
 }
 .explore__list-heart-font[class][class] {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
@@ -35101,7 +35101,7 @@ tr.hide {
   cursor: not-allowed;
 }
 .explore__list-heart-font[class][class] {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
@@ -38556,7 +38556,7 @@ tr.hide {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -43274,7 +43274,7 @@ a:hover {
   text-align: center !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -43307,7 +43307,7 @@ a:hover {
   text-align: center !important;
   text-decoration: none !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -43826,7 +43826,7 @@ a:hover {
   text-decoration: none !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -47162,7 +47162,7 @@ a:hover {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -47521,7 +47521,7 @@ a:hover {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -48315,7 +48315,7 @@ a:hover {
   padding: 0;
 }
 .atm_bx_1ltc5j7.atm_bx_1ltc5j7 {
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
 }
 .atm_cs_qo5vgd.atm_cs_qo5vgd {
   font-weight: var(--jx-zk-pv);
@@ -49658,7 +49658,7 @@ body {
   --spacer-5: 16px;
   --spacer-6: 24px;
   --spacer-7: 32px;
-  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+  --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
@@ -50132,7 +50132,7 @@ body {
   text-align: center !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -50157,7 +50157,7 @@ body {
 }
 .t5p7tdn[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--jx-zk-pv);
   font-size: var(--lhy-d-yl);
   line-height: var(--fme-bf-w);
@@ -50592,7 +50592,7 @@ body {
   text-decoration: none !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -50877,7 +50877,7 @@ body {
   text-decoration: none !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -50944,7 +50944,7 @@ body {
 }
 .p8cmq2p[class][class] {
   color: var(--f-k-smk-x);
-  font-family: var(--e-ls-qkw);
+  font-family: var(--font-family);
   font-weight: var(--e-y-j-d-v-j);
   font-size: var(--c-zdwk-p);
   line-height: var(--j-p-z-kco);
@@ -51102,7 +51102,7 @@ body {
   text-decoration: none !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -51273,7 +51273,7 @@ body {
   text-align: center !important;
   text-decoration: none !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -51590,7 +51590,7 @@ body {
   text-align: center !important;
   text-decoration: none !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -52557,7 +52557,7 @@ body {
   text-decoration: none !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -52591,7 +52591,7 @@ body {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--iw-ehf-f) !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
@@ -53726,7 +53726,7 @@ body {
   text-decoration: none !important;
   width: auto !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: var(--font-family) !important;
   font-size: var(--c-zdwk-p) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
